--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/mizgaionutalexandru/tasky#readme",
   "dependencies": {
+    "core-js": "^3.23.4",
     "parcel": "^2.6.2"
   }
 }
